# window_manager

./: 0001-.patch  0001-tmp-20220114.patch  4506.diff.txt:Zone.Identifier  README.md  README_zh.md  bundle.json  change.patch  com_openharmony_window_window_manager_pulls_3119.diff  dsadsadsd  errorCode.diff  mulitwindow_hisysevent.yaml  printscreen.patch  push_code.sh  push_code_force.sh  scene_board_enabled.gni  windowmanager_aafwk.gni  wm.diff
.github/workflows/: sync-upstream.yml
.repo/: .repo_fetchtimes.json  project.list
.repo/manifests.git/: .repo_config.json  FETCH_HEAD  config  packed-refs
adapter/include/: adapter.h
api/: @ohos.window.d.ts
dm/: BUILD.gn  libdm.map
dm/include/: display_manager_adapter.h
dm/src/: display.cpp  display_manager.cpp  display_manager_adapter.cpp  foundation1.code-workspace  screen.cpp  screen_group.cpp  screen_manager.cpp
dm_lite/: BUILD.gn
dm_lite/include/: display_manager_adapter_lite.h
dm_lite/src/: display_lite.cpp  display_manager_adapter_lite.cpp  display_manager_lite.cpp  screen_group_lite.cpp  screen_lite.cpp  screen_manager_lite.cpp
dms/screen_client/: BUILD.gn
dmserver/: BUILD.gn
dmserver/include/: abstract_display_controller.h  abstract_screen.h  abstract_screen_controller.h  display_cutout_controller.h  display_dumper.h  display_manager_agent_controller.h  display_manager_config.h  display_manager_interface.h  display_manager_proxy.h  display_manager_service.h  display_manager_service_inner.h  display_manager_stub.h  display_power_controller.h  mock_screen_manager_service.h  screen_rotation_controller.h  sensor_connector.h
dmserver/src/: abstract_display.cpp  abstract_display_controller.cpp  abstract_display_manager.cpp  abstract_screen.cpp  abstract_screen_controller.cpp  (+11 more)
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/common/: wm_common_source.h
interfaces/innerkits/dm/: display.h  display_manager.h  display_property.h  dm_common.h  screen.h  screen_group.h  screen_manager.h
interfaces/innerkits/dm_lite/: display_lite.h  display_manager_lite.h  screen_group_lite.h  screen_lite.h  screen_manager_lite.h
interfaces/innerkits/extension/: modal_system_ui_extension.h  window_extension_connection.h
interfaces/innerkits/wm/: extension_window.h  window.h  window_accessibility_controller.h  window_manager.h  window_manager_lite.h  window_option.h  window_scene.h  wm_common.h  wm_common.inl  wm_common_enum.h
interfaces/kits/napi/picture_in_picture_napi/: BUILD.gn  js_pip_controller.cpp  js_pip_controller.h  js_pip_utils.cpp  js_pip_window_manager.cpp  js_pip_window_manager.h  picture_in_picture_controller.cpp  picture_in_picture_controller.h  picture_in_picture_manger copy.cpp  picture_in_picture_manger.cpp  picture_in_picture_manger.h  picture_in_picture_option.cpp  picture_in_picture_option.h  pip_info.h
interfaces/kits/napi/picture_in_picture_napi/inner/: BUILD.gn  js_pip_manager.cpp  js_pip_manager.h
previewer/: BUILD.gn
previewer/include/: display.h  dm_common.h  input_transfer_station.h  vsync_station.h  window.h  window_display.h  window_impl.h  window_input_channel.h  window_model.h  window_option.h  window_scene.h  wm_common.h  wm_common_enum.h
previewer/mock/: accesstoken_kit.cpp  accesstoken_kit.h  configuration.h  context.h  event_handler.h  event_queue.h  event_runner.h  hilog_wrapper.h  js_transition_controller.cpp  js_window_register_manager.cpp  js_window_register_manager.h  permission.cpp  permission.h  pixel_map_napi.h  request_info.h  ui_content.h  ui_window.h  viewport_config.h  vsync_receiver.h  window_manager_hilog.h
previewer/mock/ability_runtime/: js_runtime_utils.h
previewer/mock/transaction/: rs_interfaces.h
previewer/mock/ui/: rs_node.cpp  rs_node.h  rs_surface_node.cpp  rs_surface_node.h  rs_vector4.h
previewer/mock/window_manager_napi/: js_window_manager.cpp  js_window_manager.h
previewer/src/: input_transfer_station.cpp  parcel.h  vsync_station.cpp  window.cpp  window.h  window_display.cpp  window_impl.cpp  window_input_channel.cpp  window_model.cpp  window_option.cpp  window_scene.cpp  window_scene.h
previewer/window_stage_modul/: BUILD.gn
previewer/window_stage_modules/: BUILD.gn
resources/: window_manager_config.xml
sa_profile/: 4607.json
snapshot/: BUILD.gn  image_reader.cpp  image_reader.h  image_reader_handler.h  image_reader_handler_impl.cpp  image_reader_handler_impl.h  snapshot_display.cpp  snapshot_utils.cpp  snapshot_utils.h  snapshot_virtual_display.cpp
snapshot/include/: snapshot_utils.h
snapshot/src/: snapshot_display.cpp  snapshot_utils.cpp
snapshot/test/unittest/: BUILD.gn  snapshot_utils_test.cpp
utils/: BUILD.gn  libwmutils.map
window_scene/: BUILD.gn
window_scene/intention_event/: BUILD.gn
window_scene/intention_event/framework/anr_handler/include/: anr_handler.h
window_scene/intention_event/framework/anr_handler/src/: anr_handler.cpp
window_scene/intention_event/include/: intention_event_manager.h  window_event_process.h
window_scene/intention_event/service/: BUILD.gn
window_scene/intention_event/service/anr_manager/include/: anr_manager.h
window_scene/intention_event/service/anr_manager/src/: anr_manager.cpp
window_scene/intention_event/service/event_stage/include/: event_stage.h
window_scene/intention_event/service/event_stage/src/: event_stage.cpp
window_scene/intention_event/src/: intention_event_manager.cpp  window_event_process.cpp
window_scene/intention_event/utils/include/: entrance_log.h  proto.h
window_scene/intention_event/utils/src/: util.cpp
window_session/: BUILD.gn
window_session/session/: BUILD.gn
window_session/session/host/include/: extension_session.h  scene_session.h  session.h
window_session/session/host/include/zidl/: session_interface.h  session_proxy.h  session_stub.h
window_session/session/host/src/: extension_session.cpp  scene_session.cpp  session.cpp
window_session/session/host/src/zidl/: session_proxy.cpp  session_stub.cpp
window_session/session/remote/include/: scene_session_stage.h
wm/: BUILD.gn  libwm.map
wmserver/: BUILD.gn
(+1097 files in other folders)
