import("//build/ohos.gni")

## Build snapshot {{{
config("snapshot_config") {
  visibility = [ ":*" ]
}

ohos_executable("snapshot_display") {
  install_enable = true
  sources = [
    "snapshot_display.cpp",
    "snapshot_utils.cpp",
  ]

  configs = [ ":snapshot_config" ]

  deps = [
    "//foundation/windowmanager/dm:libdm",
    "//foundation/windowmanager/utils:libwmutil",
    "//foundation/windowmanager/wm:libwm",
    "//foundation/graphic/standard/rosen/modules/render_service_base:librender_service_base",
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
    "graphic_standard:surface",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_executable("snapshot_virtual_screen") {
  install_enable = false
  sources = [
    "snapshot_utils.cpp",
    "snapshot_virtual_screen.cpp",
  ]

  configs = [ ":snapshot_config" ]

  deps = [
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
    "//foundation/windowmanager/dm:libdm",
    "//foundation/windowmanager/utils:libwmutil",
    "//foundation/windowmanager/wm:libwm",
    "//third_party/libpng:libpng",  # png
  ]

  external_deps = [
    "multimedia_image_standard:image_native",
    "utils_base:utils",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}

## Build snapshot }}}

group("test") {
  testonly = true
}
