# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("wm_interface_config") {
  visibility = [ ":*" ]
  include_dirs = [ "../../interfaces/innerkits" ]
}

ohos_shared_library("wm_interface") {
  public_configs = [ ":wm_interface_config" ]

  include_dirs = [ "../../interfaces/innerkits" ]

  external_deps = [
    "c_utils:utils",
    "graphic_standard:librender_service_client",
    "input:libmmi-client",
    "multimedia_image_framework:image_native",
    "samgr:samgr_proxy",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}
