# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../windowmanager_aafwk.gni")

ohos_shared_library("libintention_event") {
  include_dirs = [
    "./include",
    "../../wm/include",
  ]

  sources = [
    "src/intention_event_manager.cpp",
  ]

  deps = [
    "../session_manager:scene_session_manager",
    "../common:window_scene_common",
    "../session:scene_session",
    "${window_base_path}/utils:libwmutil",
  ]

  external_deps = [
    "ace_engine:ace_uicontent",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "input:libmmi-client",
  ]
  part_name = "window_manager"
  subsystem_name = "window"
}

ohos_shared_library("libwindow_event_process") {
  include_dirs = [
    "./include",
    "//foundation/arkui/ace_engine/frameworks",
    "//foundation/arkui/ace_engine/",
    "${window_base_path}/utils/include"
  ]

  sources = [
    "src/window_event_process.cpp",
  ]

  deps = [ "${window_base_path}/utils:libwmutil" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "graphic_standard:window_animation",
  ]
  part_name = "window_manager"
  subsystem_name = "window"
}