# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("session_public_config") {
  include_dirs = [
    "//foundation/window/window_manager/window_session/common/include",
    "//foundation/window/window_manager/window_session/interfaces",
    "//foundation/window/window_manager/window_session/session/host/include",
    "//foundation/window/window_manager/window_session/session/remote/include",
    # for window_manager_hilog
    "//foundation/window/window_manager/utils/include",
  ]
}

ohos_shared_library("ui_session") {
  sources = [
    "remote/src/scene_session_stage.cpp",
    "remote/src/extension_session_stage.cpp",
    "remote/src/session_stage.cpp",
    "remote/src/zidl/session_stage_proxy.cpp",
    "remote/src/zidl/session_stage_stub.cpp",
    
    "host/src/extension_session.cpp",
    "host/src/scene_session.cpp",
    "host/src/session.cpp",
    "host/src/zidl/session_proxy.cpp",
    "host/src/zidl/session_stub.cpp",
  ]

  cflags_cc = [ "-std=c++17" ]

  public_configs = [ ":session_public_config" ]

  deps = [ "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
  ]

  part_name = "window_manager"
  subsystem_name = "window"
}